src/client/sass/common.scss
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700|Lato:400,700');
@import url('https://cdn.materialdesignicons.com/2.8.94/css/materialdesignicons.min.css');

@import 'util';
@import 'button';

body {
  margin: 0;
  background-color: $color-gray;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: $font-family-header;
  color: $color-black;
}

textarea,
input {
  display: block;
  margin: 0 0 24px 0;
  padding: 10px;
  width: 100%;
  font-family: $font-family-body;
  font-size: 0.9rem;
  border-radius: 3px;
  border: 2px solid $color-dark;
  background-color: $color-white;
  color: $color-black;
  outline: none;

  box-sizing: border-box;

  transition: border $animation-easing $animation-time,
    background-color $animation-easing $animation-time;

  &:focus {
    border-color: $color-primary;
  }
}

textarea {
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  min-height: 41px;
  max-height: 300px;
}

.textarea {
  position: relative;

  textarea {
    position: relative;
    background-color: transparent;
    z-index: 1;
  }

  .highlight {
    position: absolute;
    padding: 10px;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    font-family: $font-family-body;
    font-size: 0.9rem;
    border-radius: 3px;
    border: 2px solid transparent;
    color: transparent;
    z-index: 0;

    white-space: pre-wrap;
    word-wrap: break-word;

    overflow: auto;
    box-sizing: border-box;

    span {
      background-color: rgba($color-primary, 0.25);
      border-radius: 2px;
    }
  }
}

.input.file {
  position: relative;
  width: 100%;
  height: 128px;
  border: 2px dashed $color-dimgray;
  border-radius: 3px;
  cursor: pointer;

  box-sizing: border-box;

  transition: background-color $animation-easing $animation-time,
    border $animation-easing $animation-time;

  &:hover {
    .help span {
      transform: translateY(4px);
    }
  }

  &.drag {
    border: 2px solid $color-primary;
    background-color: $color-primary;

    .help {
      span {
        color: $color-white;

        transform: translateY(4px);
      }

      p {
        color: rgba($color-white, 0.5);
      }
    }
  }

  input {
    position: absolute;
    width: 100%;
    height: 100%;
    border: none;
    background-color: transparent;
    z-index: 1;

    display: none;
  }

  .help {
    position: absolute;
    top: 36px;
    width: 100%;
    text-align: center;
    font-family: $font-family-body;
    font-size: 0.7rem;
    font-weight: bold;
    z-index: 2;
    pointer-events: none;

    span {
      display: block;
      position: relative;
      font-size: 1.8rem;
      color: $color-primary;

      transition: color $animation-easing $animation-time,
        transform $animation-easing $animation-time;
    }

    p {
      margin: 8px 0 0 0;
      color: $color-dimgray;

      transition: color $animation-easing $animation-time;
    }
  }
}

label {
  display: block;
  margin: 0 0 6px 0;
  text-align: left;
  font-family: $font-family-body;
  font-size: 0.8rem;
}

.page {
  &.full {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    text-align: center;

    .logo {
      margin: 15vh 0 32px 0;
      width: 100%;
      height: 40px;
      min-height: 40px;
      background-repeat: no-repeat;
      background-image: url('/static/img/logo_white.svg');
      background-position: center;
      background-size: auto 100%;
    }
  }
}

.modal {
  margin: 32px auto 0 auto;
  padding: 32px;
  width: 400px;
  border-radius: 4px;
  background-color: $color-white;

  box-sizing: border-box;
  @include shadow;

  %glyph {
    content: '';
    display: block;
    flex: 1;
    margin: 4px 0 0 0;
    height: 16px;
    background-size: auto 100%;
    background-position: 60% 0;
    background-repeat: no-repeat;
    background-image: url('/static/img/havu.svg');
  }

  h2 {
    display: flex;
    margin: 8px 0 (32px + 8px) 0;
    align-items: center;

    &:before {
      @extend %glyph;
    }

    &:after {
      @extend %glyph;
      transform: scaleX(-1);
    }
  }

  #error {
    margin: 0 0 24px 0;
    padding: 8px 12px;
    text-align: left;
    font-family: $font-family-body;
    font-size: 0.7rem;
    border: 2px solid $color-error;
    border-radius: 3px;
    font-weight: bold;
    color: $color-error;

    box-sizing: border-box;
  }

  > .sink {
    padding: 8px 0 0 0;
    height: 36px;
  }
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 32px;
  height: 80px;
  background-color: $color-white;

  box-sizing: border-box;

  .logo {
    position: relative;
    width: 160px;
    height: 100%;
    background-repeat: no-repeat;
    background-image: url('/static/img/logo.svg');
    background-position: center;
    background-size: 100%;
    z-index: 101;
  }

  .search {
    position: absolute;
    align-items: center;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;

    input {
      margin: 20px auto 0 auto;
      flex: 1;
      padding-left: 12px;
      width: 450px;
      border-radius: 4px;
      border-color: $color-gray;
    }

    .profile {
      display: none;
      margin-left: 16px;
      width: 36px;
      height: 36px;

      .image {
        width: 100%;
        height: 100%;
      }
    }

    button {
      display: none;
    }
  }

  .profile {
    display: flex;
    position: relative;
    align-items: center;
    z-index: 101;

    .image {
      width: 32px;
      height: 32px;
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
      border-radius: 50%;
      background-color: $color-gray;
      border: 2px solid $color-primary;
      background-image: url('/static/img/unknown.png');
      cursor: pointer;
    }

    button {
      margin-right: 16px;
    }
  }

  button {
    z-index: 2;
  }
}

#wrapper {
  display: flex;
  flex-flow: row;
  justify-content: center;
  margin: 1px;
}

.dialog {
  position: absolute;
  background-color: $color-white;
  border-radius: 4px;
  overflow: hidden;

  @include shadow;
}

.emoji {
  display: inline-block;
  vertical-align: -15%;
  width: 1em;
  height: 1em;
}

.search .dialog {
  display: none;
  top: 70px;
  left: 50%;
  width: 400px;

  transform: translateX(-50%);

  > div.border {
    .tag,
    .location {
      &:first-child {
        border-top: 2px solid $color-gray;
      }
    }
  }
}

.search {
  .item {
    display: flex;
    align-items: center;
    height: 64px;
    cursor: pointer;

    transition: background-color $animation-easing $animation-time;

    &:hover {
      background-color: $color-gray;
    }

    &.tag {
      padding-left: 22px;

      .icon {
        display: none;
      }

      .info p {
        font-weight: bold;
        color: $color-primary;
      }
    }

    .icon {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 64px;
      height: 64px;

      .mdi {
        font-size: 24px;
        color: $color-primary;
      }

      .image {
        width: 32px;
        height: 32px;
        border-radius: 50%;
        background-color: $color-gray;
        background-position: center;
        background-size: cover;
        background-image: url('/static/img/unknown.png');
      }
    }

    .info {
      font-family: $font-family-body;

      p {
        margin: 0;
        font-size: 0.9rem;
        color: $color-black;
      }

      small {
        font-size: 0.7rem;
        color: $color-dimgray;
      }
    }
  }
}

.dialog.menu {
  display: none;
  width: 150px;
  font-family: $font-family-body;
  font-size: 0.9rem;
  border: 2px solid $color-dimgray;
  color: $color-black;
  overflow: visible;
  z-index: 10;

  transform: translateX(-100%);

  &:before {
    position: absolute;
    content: '';
    top: -7px;
    right: 9px;
    width: 0;
    height: 0;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;

    border-bottom: 7px solid $color-dimgray;
  }

  .list {
    border-radius: 3px;
    overflow: hidden;
  }

  a {
    text-decoration: none;
    color: $color-black;
  }

  .item {
    padding: 16px;
    color: $color-black;
    cursor: pointer;

    transition: background-color $animation-easing $animation-time;

    &:hover {
      background-color: $color-gray;
    }

    .mdi {
      margin-right: 4px;
      width: 24px;
      text-align: center;
      color: $color-dark;
    }
  }

  .create {
    display: none;

    .mdi {
      color: $color-primary;
    }
  }

  hr {
    margin: 0;
    padding: 0;
    height: 2px;
    border: none;
    background-color: $color-gray;
  }
}

.button-small {
  position: relative;
  padding: 0 9px 0 (4px + 16px + 1px);
  height: 24px;
  border-radius: 24px;
  font-size: 0.7rem;
  font-family: $font-family-body;
  line-height: 21px;
  color: $color-dark;
  border: 2px solid $color-gray;
  user-select: none;
  cursor: pointer;

  box-sizing: border-box;

  transition: transform $animation-easing $animation-time,
    border-color $animation-easing $animation-time,
    background-color $animation-easing $animation-time;

  &:hover {
    transform: translateY(-1px);
    border-color: $color-primary;
  }

  .mdi {
    position: absolute;
    left: 3px;
    font-size: 1rem;
  }
}

.load-more {
  margin: 0 0 32px 0;
  height: 48px;
  width: 100%;
}

@media screen and (max-width: 1000px) {
  nav {
    padding: 0;
    width: 100%;
    flex-direction: column;
    height: auto;

    .logo {
      width: 160px;
      height: 80px;
    }

    .search {
      display: flex;
      position: relative;
      margin: 0 0 32px 0;
      width: 450px;

      input {
        flex: 1;
        margin: 0;
      }

      .profile {
        display: block;
      }

      button {
        display: block;
      }
    }

    .profile {
      display: none;
    }

    button {
      display: none;
    }

    .dialog.user-menu .create {
      display: block;
    }

    .dialog.user-menu {
      transform: translate(-100%, 4px);

      &:before {
        right: 11px;
      }
    }
  }
}

@media screen and (max-width: 600px) {
  html,
  body {
    background-color: $color-white;
  }

  nav {
    padding: 0 32px;

    .search {
      width: 100%;
    }
  }

  .page.full {
    display: block;
    height: auto;

    .logo {
      margin-top: 32px;
      background-image: url('/static/img/logo.svg');
    }
  }

  .modal {
    padding-right: 42px;
    padding-left: 42px;
    width: 100%;
    border-radius: 0;
    box-shadow: none;
  }
}

